[package]
name = "rds"
version = "0.1.0"
edition = "2024"

[dependencies]
modular-bitfield-msb = "0.11.2"
heapless = "0.9.2"
thiserror = "2.0.18"

[dev-dependencies]
crossterm = "0.29.0"
log = "0.4"
ratatui = "0.30.0"
rdspy = { path = "/Users/chris/src/rdspy" }
walkdir = "2.5"

[[example]]
name = "decode_rds_spy_log"
path = "example/decode_rds_spy_log.rs"

[[example]]
name = "rds_viewer"
path = "example/rds_viewer.rs"
