[package]
name = "rds-rs"
version = "1.0.0"
edition = "2024"
authors = ["Chris Mumford <cmumford@cmumford.com>"]
description = "A Library for Decoding RDS/RBDS data"
readme = "README.md"
keywords = ["RDS", "radio", "FM"]
license = "MIT"

[dependencies]
heapless = "0.9.3"
libm = "0.2"
modular-bitfield-msb = "0.11.2"
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
crossterm = "0.29.0"
log = "0.4"
ratatui = "0.30.0"
rdspy = { version = "1.0.1" }
walkdir = "2.5"

[[example]]
name = "decode_rds_spy_log"
path = "example/decode_rds_spy_log.rs"

[[example]]
name = "rds_viewer"
path = "example/rds_viewer.rs"
